# pyXRayLabTool

./: .bandit  .flake8  .gitattributes  .gitignore  .graphify_uncached.txt  .graphifyignore  .pre-commit-config.yaml  .readthedocs.yaml  .research-log.jsonl  CHANGELOG.md  CLI_REFERENCE.md  CODE_QUALITY_REPORT.md  DEVELOPMENT_SETUP.md  GITHUB_ACTIONS_FIX_VALIDATION.md  INSTALLATION.md  MANIFEST.in  Makefile  PERFORMANCE.md  PUBLISHING.md  PYPI_PUBLISHING.md  README.md  RELEASE_NOTES_v0.2.4.md  REQUIREMENTS_CONSOLIDATION.md  VIRTUAL_ENV.md  baseline_ci_report.json  bottleneck_analysis_report.json  bottleneck_report.md  build_package.py  install_completion.py  jax_audit_report.md  performance_baseline_summary.json  performance_history.json  profiling_report.md  pyproject.toml  python_optimization_report.md  requirements-binder.txt  requirements-core-lock.txt  requirements-dev.txt  requirements.txt  run_tests.py  (+9 more)
.githooks/: post-commit
.github/: CI_OPTIMIZATION_GUIDE.md  WORKFLOWS.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/scripts/: cache-warmup.py  smart-test-selection.py  workflow-reporter.py
.github/workflows/: README.md  ci-fast.yml  ci-optimized-v2.yml  ci-optimized.yml  ci-ultra-optimized.yml  ci.yml  cleanup-system-ci.yml  cleanup-system-release.yml  dependencies.yml  dev-feedback.yml  docs-optimized.yml  docs-test-optimized.yml  docs-test.yml  docs.yml  error-detection-recovery.yml  matrix-optimization.yml  mirror.yml  performance-monitoring.yml  pre-commit-optimization.yml  publish.yml  release.yml  security-enhanced.yml  security.yml  status-dashboard.yml  test.yml
.serena/: .gitignore  project.yml
benchmarks/: perf_benchmarks.py
docs/: Makefile  audit_remediation_plan.md  changelog.rst  cleanup-system-guide.md  cli_reference.rst  conf.py  contributing.rst  getting_started.rst  index.rst  performance.rst  requirements.txt  security_audit_cicd.md  test_coverage_audit.md  testing.rst
docs/_static/: custom.css
docs/api/: analysis.rst  backend.rst  calculators.rst  constants.rst  data_handling.rst  export.rst  gui.rst  index.rst  interfaces.rst  io_operations.rst  optimization.rst  utils.rst  validation.rst
docs/architecture/: 001-adr-jax-vs-numpy.md  002-adr-pyqtgraph-vs-matplotlib.md  003-adr-dtype-policy.md  004-adr-host-device-transfers.md  index.rst  jax_architecture.rst
docs/development/: changelog.rst  contributing.rst  performance.rst  rollback_procedures.rst  testing.rst
docs/examples/: basic_examples.ipynb  getting_started.ipynb  index.rst
docs/guides/: cli_reference.rst  completion_guide.rst  getting_started.rst  migration_guide_v0_4.rst
docs/optimization/: vectorization_analysis.md
docs/physics/: atomic_data.rst  calculations.rst  xray_optics.rst
docs/source/: cli_guide.rst  conf.py  contributing.rst  examples.rst  faq.rst  index.rst  installation.rst  performance_guide.rst  quickstart.rst
docs/tutorials/: index.rst
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
notebooks/: getting_started.ipynb
reports/quality/: quality_summary.json
scripts/: README.md  audit_architecture.py  audit_documentation.py  automated_testing.py  ci-config.yml  cleanup_manager.py  coverage_analysis.py  final_qa_report.py  format-code.sh  gui_capture_screenshot.py  gui_headless_smoke.py  recovery_manager.py  run_type_check.py  setup-githooks.sh  test_cli_examples.py  test_cli_structure.py  test_code_examples.py  test_docs.py  test_documentation_formatting.py  test_documentation_integration.py  test_documentation_links.py  validate-actions.sh  validate_style_guide.py  verify_cli_commands.py
tests/: README.md  conftest.py  test_base.py  test_ci_cd_integration.py  test_cli.py  test_cli_edge_cases.py  test_code_quality.py  test_code_standards.py  test_codebase_cleanup.py  test_completion_installer.py  test_completion_integration.py  test_completion_virtual_environments.py  test_core.py  test_core_physics.py  test_development_workflow.py  test_documentation_language.py  test_documented_patterns_validation.py  test_edge_cases.py  test_formula_parsing.py  test_gui_progress.py  test_gui_smoke.py  test_import_patterns.py  test_integration.py  test_memory_management.py  test_performance_benchmarks.py  test_performance_optimizations.py  test_performance_optimizations_enhanced.py  test_robustness.py  test_scattering_factors.py  test_smooth_data.py  test_style_guide_compliance.py  test_utils_enhanced.py  test_utils_helpers.py
tests/characterization/: __init__.py  test_golden_constants.py  test_golden_derived_quantities.py  test_golden_integration.py  test_golden_interpolation.py  test_golden_molecular.py  test_golden_pipeline.py
tests/fixtures/: test_base.py  test_utilities.py
tests/integration/: test_cleanup_integration.py  test_cli.py  test_cli_edge_cases.py  test_completion_bridge.py  test_completion_installer.py  test_completion_integration.py  test_end_to_end_workflows.py  test_export_integration.py  test_integration.py
tests/performance/: conftest.py  test_baseline_establishment.py  test_bottleneck_identification.py  test_cleanup_performance_benchmarks.py  test_memory_management.py  test_optimization_validation.py  test_performance_benchmarks.py  test_performance_optimizations.py  test_performance_optimizations_enhanced.py  test_speed_optimization_benchmarks.py  test_v025_performance_features.py  test_vectorization_improvements.py  test_vectorized_core.py
tests/unit/: test_backend_dispatch.py  test_batch_partial_failure.py  test_cache_efficiency.py  test_calculation_worker.py  test_cli_enhanced_error_handling.py  test_completion_cache.py  test_completion_environment.py  test_compound_analysis.py  test_concurrent_cache.py  test_crystal_structure.py  test_data_export.py  test_device.py  test_enhanced_xray_result_typing.py  test_exceptions.py  test_export_functionality.py  test_file_operations.py  (+7 more)
xraylabtool/: __init__.py  atomic_data_cache.py  batch_processor.py  cli.py  completion_installer.py  constants.py  core.py  device.py  exceptions.py  typing_extensions.py  utils.py
(+94 files in other folders)
