[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xraylabtool"
version = "0.4.0"
authors = [
    {name = "Wei Chen", email = "wchen@anl.gov"},
]
maintainers = [
    {name = "Wei Chen", email = "wchen@anl.gov"},
]
description = "Ultra-fast Python package for X-ray optical properties calculation with CXRO/NIST data, CLI tools, and synchrotron applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    # Development Status
    "Development Status :: 5 - Production/Stable",

    # Intended Audience
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Healthcare Industry",

    # Operating System
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",

    # Programming Language
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",

    # Topics
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Utilities",

    # Environment
    "Environment :: Console",
    "Environment :: Web Environment",

    # Natural Language
    "Natural Language :: English",

    # Typing
    "Typing :: Typed",
]
keywords = [
    # Core X-ray terms
    "xray", "x-ray", "xrd", "xrr", "saxs", "crystallography", "diffraction", "scattering",
    "synchrotron", "beamline", "optics", "reflectometry", "absorption", "spectroscopy",

    # Scientific domains
    "materials-science", "condensed-matter", "physics", "chemistry", "nanotechnology",
    "thin-films", "multilayers", "nanostructures", "characterization",

    # Data sources and methods
    "cxro", "nist", "atomic-scattering-factors", "optical-constants", "refractive-index",
    "critical-angle", "attenuation-length", "form-factors", "dispersion", "absorption-coefficient",

    # Technical capabilities
    "high-performance", "vectorized", "batch-processing", "parallel-processing",
    "scientific-computing", "numerical-analysis", "laboratory", "analysis",

    # Interface and usability
    "cli", "command-line", "python-package", "api", "cross-platform",
    "shell-completion", "bash-completion", "zsh-completion", "fish-completion",
    "powershell-completion", "tab-completion", "virtual-environment", "environment-isolation",

    # Applications
    "materials-characterization", "structure-analysis", "quality-control",
    "medical-imaging", "industrial-radiography", "non-destructive-testing"
]

# All dependencies (core + dev + docs + export + api + analysis + perf + gui + jupyter)
dependencies = [
    # Core runtime
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "mendeleev>=1.1.0",
    "tqdm>=4.67.1",

    # JAX ecosystem — CPU-only base (works on all platforms)
    # GPU users: install gpu_cuda12 or gpu_cuda13 extra (see below)
    "jax>=0.8.0",
    "jaxlib>=0.8.0",
    "interpax>=0.3.0",
    "psutil>=7.1.3",

    # Testing
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-benchmark>=5.2.3",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",

    # Linting, formatting, type checking
    "mypy>=1.19.0",
    "ruff>=0.14.9",
    "safety>=2.3.4",
    "pandas-stubs>=2.3.3.251201",
    "types-tqdm>=4.67.0.20250809",
    "types-psutil>=7.1.3.20251202",

    # Build and publish
    "pbr>=7.0.3",
    "pre-commit>=4.5.0",
    "codecov>=2.1.13",
    "build>=1.0.0",
    "twine>=4.0.0",

    # Documentation
    "sphinx>=8.2.3",
    "furo>=2025.9.25",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-tabs>=3.4.7",
    "sphinx-togglebutton>=0.3.2",
    "myst-parser>=4.0.1",
    "sphinxcontrib-napoleon>=0.7",
    "doc8>=2.0.0",
    "rstcheck>=6.2.5",
    "Pygments>=2.19.2",
    "docutils>=0.21.2",
    "nbsphinx>=0.9.8",
    "ipykernel>=7.1.0",

    # Enhanced export
    "openpyxl>=3.1.5",
    "jinja2>=3.1.6",

    # API server
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "PyJWT[crypto]>=2.10.0",
    "bcrypt>=4.2.0",
    "python-dateutil>=2.9.0.post0",

    # Advanced analysis
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",

    # Performance profiling
    "memory-profiler>=0.61.0",
    "line-profiler>=5.0.0",
    "py-spy>=0.4.1",

    # Desktop GUI
    "PySide6>=6.10.1",
    "pyqtgraph>=0.13.7",

    # Jupyter notebooks
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.0",
    "ipywidgets>=8.1.8",
]

[project.optional-dependencies]
gpu_cuda13 = [
    # CUDA 13 GPU support (SM >= 7.5: Turing+) — versions must match jaxlib
    "jax-cuda13-plugin>=0.8.0",
    "jax-cuda13-pjrt>=0.8.0",
]
gpu_cuda12 = [
    # CUDA 12 GPU support (SM >= 5.2: Maxwell+) — versions must match jaxlib
    "jax-cuda12-plugin>=0.8.0",
    "jax-cuda12-pjrt>=0.8.0",
]
plots = [
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "plotly>=6.5.0",
]

[project.urls]
Homepage = "https://github.com/imewei/pyXRayLabTool"
Documentation = "https://pyxraylabtool.readthedocs.io"
Repository = "https://github.com/imewei/pyXRayLabTool"
"Source Code" = "https://github.com/imewei/pyXRayLabTool"
"Bug Tracker" = "https://github.com/imewei/pyXRayLabTool/issues"
"Changelog" = "https://github.com/imewei/pyXRayLabTool/blob/main/CHANGELOG.md"
"CLI Reference" = "https://pyxraylabtool.readthedocs.io/en/latest/cli_guide.html"
"Shell Completion Guide" = "https://pyxraylabtool.readthedocs.io/en/latest/completion_guide.html"
"Discussions" = "https://github.com/imewei/pyXRayLabTool/discussions"
"Release Notes" = "https://github.com/imewei/pyXRayLabTool/releases"

[tool.uv]
package = true
# GPU extras are mutually exclusive — only ONE CUDA plugin set can be active.
# Without this, `uv sync --all-extras` installs both cuda12 and cuda13 plugins
# simultaneously, causing PJRT_Api ALREADY_EXISTS registration conflicts.
conflicts = [
    [
        { extra = "gpu-cuda12" },
        { extra = "gpu-cuda13" },
    ],
]

[project.scripts]
xraylabtool = "xraylabtool.interfaces.cli:main"
xraylabtool-gui = "xraylabtool.gui.__main__:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["xraylabtool*"]
exclude = ["tests*", "docs*", "*.tests*", "*.tests"]

# Include all sub-packages
[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
xraylabtool = [
    "data/AtomicScatteringFactor/*.nff",
    "py.typed",  # PEP 561 typing marker
]


[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",  # Show all test outcomes except passed
    "--strict-markers",  # Treat unknown marks as errors
    "--strict-config",  # Treat unknown config options as errors
    "--cov=xraylabtool",  # Coverage for main package
    "--cov-branch",  # Branch coverage
    "--cov-report=term-missing",  # Show missing lines
    "--cov-report=html:htmlcov",  # HTML coverage report
    "--cov-report=xml",  # XML coverage report for CI
    "--tb=short",  # Shorter traceback format
    "--durations=10",  # Show 10 slowest tests
    "-v",  # Verbose output
]
testpaths = ["tests", "tests/unit", "tests/integration", "tests/performance"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    # Test categories by structure
    "unit: marks tests as unit tests (individual components)",
    "integration: marks tests as integration tests (end-to-end workflows)",
    "performance: Performance benchmark tests (deselected by default, use --run-performance)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",

    # Sub-package markers
    "calculators: marks tests for calculators module",
    "data_handling: marks tests for data handling module",
    "interfaces: marks tests for interfaces module (CLI, completion, etc.)",
    "io: marks tests for I/O operations",
    "validation: marks tests for validation and error handling",
    "analysis: marks tests for analysis module",
    "export: marks tests for export functionality",
    # Performance markers
    "memory: marks tests that check memory usage and management",
    "stability: marks tests that check numerical stability",
    "regression: marks tests that check for performance regressions",
    "benchmark: marks tests as benchmark tests",

    # Data size markers
    "small_data: marks tests that use small datasets (fast)",
    "medium_data: marks tests that use medium datasets",
    "large_data: marks tests that use large datasets (may require more memory)",

    # System resource markers
    "requires_memory: marks tests that require significant memory",
    "requires_cpu: marks tests that require multiple CPU cores",
    "requires_disk: marks tests that require disk I/O",

    # Quality markers
    "smoke: marks basic smoke tests",
    "edge_case: marks edge case tests",
    "error_handling: marks error handling tests",

    # CI/CD markers
    "ci: marks tests that should run in CI",
    "local_only: marks tests that should only run locally",
    "nightly: marks tests for nightly builds",
]
filterwarnings = [
    "error",  # Treat warnings as errors by default
    # Ignore specific warnings
    "ignore::ResourceWarning",
    "ignore:unclosed database in:ResourceWarning",
    "ignore::DeprecationWarning:tests.*",
    "ignore::DeprecationWarning:xraylabtool.*",
    "ignore::PendingDeprecationWarning",
    # NumPy warnings
    "ignore:.*numpy.ndarray size changed.*:RuntimeWarning",
    "ignore:.*numpy.ufunc size changed.*:RuntimeWarning",
    # Scientific computing warnings that are typically safe to ignore
    "ignore:.*divide by zero.*:RuntimeWarning",
    "ignore:.*invalid value.*:RuntimeWarning",
    # Matplotlib warnings
    "ignore:.*Agg backend.*:UserWarning",
    "ignore:.*tight_layout.*:UserWarning",
    # Performance optimization warnings
    "ignore:.*performance.*:UserWarning",
]
# Logging configuration
log_auto_indent = true
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "tests/logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(filename)s:%(lineno)d %(funcName)s(): %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
# Test collection settings
norecursedirs = [
    "build",
    "dist",
    ".tox",
    ".eggs",
    "venv",
    ".venv",
]
# Timeout and parallel execution settings
# timeout = 300  # 5 minutes default timeout (pytest-timeout)
# timeout_method = "thread"
# Parallel execution: add "-n auto" to addopts (pytest-xdist)
# Note: Performance baseline file is located at tests/data/performance_baselines.json

[tool.mypy]
python_version = "3.12"
files = ["xraylabtool", "tests"]
show_error_codes = true
pretty = true

# Enhanced strict mode settings
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
disallow_any_generics = true
disallow_subclassing_any = true

# Enhanced type safety warnings
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Additional strict settings for enhanced type safety
disallow_any_unimported = true
disallow_any_expr = false  # Too strict for scientific computing with NumPy
no_implicit_reexport = true
strict_concatenate = true

# Performance optimizations
cache_dir = ".mypy_cache"
sqlite_cache = true
incremental = true
follow_imports = "normal"

# Error output
show_column_numbers = true
show_error_context = true
color_output = true
error_summary = true

[[tool.mypy.overrides]]
# Third-party libraries without stubs
module = [
    "matplotlib.*",
    "scipy.*",
    "mendeleev.*",
    "tqdm.*",
    "pytest_benchmark.*",
    "memory_profiler.*",
    "line_profiler.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Enhanced strict mode for core modules (gradual rollout)
module = [
    "xraylabtool.calculators.core",
    "xraylabtool.utils",
    "xraylabtool.constants",
    "xraylabtool.calculators.derived_quantities",
]
# Additional strict settings for core modules
disallow_any_expr = false  # Still too strict for NumPy scientific computing
warn_return_any = true
strict_concatenate = true

[[tool.mypy.overrides]]
# Test files can be less strict but with some type safety
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Keep basic type safety for test infrastructure
disallow_any_unimported = false
no_implicit_reexport = false

[[tool.mypy.overrides]]
# Pandas has stubs available
module = "pandas.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
# Psutil has stubs available
module = "psutil.*"
ignore_missing_imports = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PLR", # pylint refactor
    "PLW", # pylint warnings
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
    "A",   # flake8-builtins
    "RUF", # Ruff-specific rules
    "PL",  # pylint
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value used in comparison
    "S101",  # assert statements (used in tests)
    "S603",  # subprocess call (we use subprocess safely)
    "N802",  # function name should be lowercase (scientific naming conventions)
    "N803",  # argument name should be lowercase (scientific naming conventions)
    "A003",  # builtin name shadowing (common in scientific computing)
    "PLC0414",  # import alias does not rename original package
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    ".eggs",
    ".tox",
    "docs",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101", "PLC0415", "S311", "RUF001", "RUF002", "RUF003", "RUF005", "RUF012", "RUF059", "S110", "N806", "B007", "B905", "S607", "F401", "PLW0603", "PLW2901", "SIM102", "S102", "SIM117", "E402", "E741"]
"docs/*" = ["RUF001", "RUF002", "RUF003", "PLC2401", "N999"]  # Scientific notation and Unicode characters
".github/*" = ["S607", "PLW2901"]  # Allow partial paths in GitHub scripts
"xraylabtool/interfaces/cli.py" = ["PLC0415", "PLR0911", "PLR0912", "PLR0915", "ARG001", "ARG002"]  # CLI lazy imports and complexity
"xraylabtool/interfaces/completion*.py" = ["PLC0415", "PLW0603", "S607", "UP035", "ARG001", "ARG002"]  # Completion system patterns
"xraylabtool/core/*.py" = ["RUF001", "RUF002", "RUF003"]  # Unicode scientific symbols
"xraylabtool/analysis/*.py" = ["S110", "SIM102", "B904"]  # Analysis module patterns
"xraylabtool/analysis/comparator.py" = ["PLR0912"]
"__init__.py" = ["F401", "PLR0911", "PLR0912", "PLC0415"]     # Allow unused imports, complexity, and lazy imports in __init__.py
# Relax rules for completion system files (complex generated/template code)
"**/interfaces/completion.py" = ["E501", "PLR0912", "PLR0915", "PLR0911", "SIM102"]
"**/interfaces/completion_v2/*.py" = ["E501", "PLR0912", "PLR0915", "PLR0911", "SIM112", "B006", "S604", "ARG002", "SIM118", "PLW0603", "ARG001", "S112", "PLW2901", "RUF001", "PLC0415", "S110"]
# Scientific computing files with performance-critical lazy imports
"**/utils.py" = ["PLC0415", "ARG001", "PLR0912"]  # Allow lazy imports, unused args, and complex parse_formula in utility functions
"**/typing_extensions.py" = ["PLC0415", "UP007"]  # Allow lazy imports and legacy union syntax for compatibility
"**/validation/validators.py" = ["PLC0415", "B905"]  # Allow lazy imports and zip without strict in validators
"**/data_handling/*.py" = ["PLR0912", "PLR0915", "PLC0415", "S110", "PLW0603", "A002", "PLR0911", "B905"]  # Allow complex functions, global vars, and error handling patterns in data handling
"**/io/*.py" = ["PLC0415", "PLR0912"]  # Allow lazy imports and complex functions in I/O
"scripts/run_type_check.py" = ["PLR0912", "PLR0915"]  # Allow complex functions in type checking script
"scripts/test_docs.py" = ["PLR0912", "PLR0915", "S112", "S607"]  # Allow complex functions and subprocess calls in documentation testing script
"scripts/gui_headless_smoke.py" = ["PLR0915"]
"xraylabtool/gui/*.py" = ["PLR0915", "PLR0912", "PLR1714", "PLC0415", "E402", "SIM108"]
"xraylabtool/backend/*.py" = ["PLC0415", "PLW0603"]  # Lazy imports and global state are intentional in the backend abstraction layer
"xraylabtool/calculators/cache.py" = ["PLC0415"]  # Deferred imports to break circular dependency
"xraylabtool/calculators/kernels.py" = ["PLC0415"]  # Deferred imports for JIT and constants
"xraylabtool/calculators/scattering_data.py" = ["PLC0415"]  # Deferred imports for cache and pandas
"xraylabtool/device.py" = ["PLC0415", "SIM105"]  # Lazy imports for optional JAX; try/except for optional packages
"scripts/validate_style_guide.py" = ["PLW2901", "SIM102", "S607", "PLR0912", "PLR0915", "PLC0415"]  # Allow style validation patterns

[tool.ruff.lint.isort]
known-first-party = ["xraylabtool"]
force-sort-within-sections = true

[tool.coverage.run]
source = ["xraylabtool"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
    # Exclude modules with specialized functionality that have limited test coverage
    "*/interfaces/completion.py",          # Shell completion bridge - basic functionality
    "*/interfaces/completion_legacy.py",   # Legacy completion system - deprecated
    "*/interfaces/completion_v2/*.py",     # New completion system - complex to test
    "*/io/data_export.py",                 # Data export utilities - basic functionality
    "*/io/file_operations.py",             # File I/O operations - basic functionality
    "*/validation/exceptions.py",          # Exception definitions - simple classes
    "*/validation/validators.py",          # Validation utilities - limited usage
    "*/gui/*",                             # GUI module - requires PySide6/Qt infrastructure
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug:",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Safety configuration for dependency vulnerability scanning
[tool.safety]
# Configuration for safety vulnerability scanning
# Ignore specific vulnerabilities if they are false positives
ignore = []
